env/armadillo/core/namespaces-deleted.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
$patch: delete
---
apiVersion: v1
kind: Namespace
metadata:
  name: vpa
$patch: delete
---
apiVersion: v1
kind: Namespace
metadata:
  name: minio-operator
$patch: delete
---
apiVersion: v1
kind: Namespace
metadata:
  name: dragonfly-operator-system
$patch: delete
---
apiVersion: v1
kind: Namespace
metadata:
  name: cnpg-system
$patch: delete
---
apiVersion: v1
kind: Namespace
metadata:
  name: mongodb-system
$patch: delete
---
apiVersion: v1
kind: Namespace
metadata:
  name: elastic-system
$patch: delete
---
apiVersion: v1
kind: Namespace
metadata:
  name: kafka-operator
$patch: delete
---
apiVersion: v1
kind: Namespace
metadata:
  name: fluentd-system
$patch: delete
---
apiVersion: v1
kind: Namespace
metadata:
  name: reloader
$patch: delete
