env/armadillo/core/namespaces.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: longhorn-system
$patch: delete
---
apiVersion: v1
kind: Namespace
metadata:
  name: keda
$patch: delete
