env/armadillo/core/kubernetes-dashboard-httproute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: basic-auth
  namespace: kubernetes-dashboard
spec:
  basicAuth:
    secret: kubernetes-dashboard-secrets
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - "kubernetes-dashboard.armadillo.local"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: basic-auth
      backendRefs:
        - name: kubernetes-dashboard-kong-proxy
          port: 80
